Added abstract factory UML diagram

--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -54,6 +54,9 @@
     <Folder Include="BehavioralPatterns\" />
     <Folder Include="StructuralPatterns\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="CreationalPatterns\AbstractFactory\Abstract Factory Class Diagram.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
